Added lombok in pom and Tags comments in runner

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.28</version> <!-- Match the Lombok version -->
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
